[package]
name = "blockhead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
reqwest ={ version="0.11.17", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = {version="1.0.96", features = ["preserve_order"]}
serde_yaml = "0.9.21"
openssl = { version = "0.10.52", features = ["vendored"] }
prometheus = { version = "0.13.3", features = ["process"] }
futures = { version = "0.3", default-features = false }
rand = "0.8.5"
once_cell = "1.17.1"
config = { version= "0.13.3", features = ["yaml"] }
async-trait = "0.1.68"
log = "0.4.17"
env_logger = "0.10.0"
redb = "0.16.0"
actix-web = "4.3.1"
actix-cors = "0.6.4"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
hex = "0.4.3"

